Test with other poller modes